# Franklin

./: .gitignore
backend/: docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6c88d489690c_initial_all_model.py
backend/app/: main.py
backend/app/api/v1/dependencies/: __init__.py  dependencies.py
backend/app/api/v1/routers/: categories.py  transactions.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/database/: __init__.py  session.py
backend/app/models/: __init__.py  achievement.py  category.py  import_job.py  rule.py  streak.py  transaction.py  weekly_review.py
backend/app/repositories/: __init__.py  category.py  transaction.py
backend/app/schemas/: __init__.py  category.py  transaction.py
backend/app/services/: __init__.py  category_service.py  transaction_service.py
backend/tests/: conftest.py  test_categories.py  test_transactions.py
