[tool.poetry]
name = "smartspend-backend"
version = "0.1.0"
description = "SmartSpend — умный трекер расходов с AI-категоризацией"
authors = ["Daniel Zhdanov"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.17"
celery = { extras = ["redis"], version = "^5.4.0" }
redis = "^5.2.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
chardet = "^5.2.0"
python-dateutil = "^2.9.0"
greenlet = "^3.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
